Stop wrapping anchor text

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -56,6 +56,7 @@ img {
 a {
   color: $global-font-color;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 @each $header, $size in $global-headings {
